exports[`test checks a list of schedules to see if any are open 1`] = `
Array [
  Array [
    true,
    "Hours",
    "10:30am — 2:00am",
  ],
]
`;

exports[`test handles multiple internal schedules for the same timeframe 1`] = `
Array [
  Array [
    false,
    "Hours",
    "10:30am — 12:00pm",
  ],
  Array [
    true,
    "Hours",
    "1:00pm — 3:00pm",
  ],
]
`;

exports[`test handles multiple named schedules for the same timeframe 1`] = `
Array [
  Array [
    false,
    "Hours",
    "10:30am — 12:00pm",
  ],
  Array [
    false,
    "Hours2",
    "10:30am — 12:00pm",
  ],
  Array [
    true,
    "Hours2",
    "1:00pm — 3:00pm",
  ],
]
`;

exports[`test returns a list of [isOpen, scheduleName, verboseStatus] tuples 1`] = `
Array [
  Array [
    true,
    "Hours",
    "10:30am — 2:00am",
  ],
]
`;

exports[`test returns false if none are available for this day 1`] = `
Array [
  Array [
    false,
    "Hours",
    "Closed today",
  ],
]
`;

exports[`test returns false if none are open 1`] = `
Array [
  Array [
    false,
    "Hours",
    "10:30am — 2:00pm",
  ],
]
`;
